--- a/src/css/chefOrder.css
+++ b/src/css/chefOrder.css
@@ -7,7 +7,7 @@
     overflow-y: scroll;
 }
 .range-bar {
-    display: none;
+    display: none !important;
     justify-content: center;
     align-items: center;
     padding: 14px 0 0;
@@ -167,7 +167,7 @@ margin: 0;
 @media (max-width:800px) {
     .range-bar {
         padding: 4px 0 0;
-        display: flex;
+        display: flex !important;
     }
     .order-container.chef-bottum {
         padding: 2px 9px 0;
