--- a/src/testing/Modal.css
+++ b/src/testing/Modal.css
@@ -1,4 +1,6 @@
-.modal-overlay {
+/* src/utills/CustomPopup.css */
+
+.custom-popup-overlay {
     position: fixed;
     top: 0;
     left: 0;
@@ -6,63 +8,47 @@
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
     display: flex;
-    align-items: center;
     justify-content: center;
-}
-
-.modal-content {
-    background: #fff;
+    align-items: center;
+  }
+  
+  .custom-popup-content {
+    background: white;
     padding: 20px;
     border-radius: 8px;
-    max-width: 600px;
+    text-align: center;
+    max-width: 400px;
     width: 100%;
-}
-
-.modal-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.modal-close {
-    background: none;
-    border: none;
-    font-size: 20px;
-    cursor: pointer;
-}
-
-.modal-body {
-    margin-top: 20px;
-}
-
-.modal-items {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.modal-item {
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
-}
-
-.modal-item-image {
-    width: 100px;
-    height: 100px;
-    margin-right: 20px;
-}
-
-.modal-item-details {
-    display: flex;
-    flex-direction: column;
-}
-
-.modal-item-details button {
-    margin-top: 10px;
-    padding: 5px 10px;
-    border: none;
+  }
+  
+  .custom-popup-image {
+    max-width: 100px;
+    margin-bottom: 10px;
+  }
+  
+  .custom-popup-title {
+    margin: 0 0 10px;
+    font-size: 24px;
+    color: #333;
+  }
+  
+  .custom-popup-body {
+    margin: 0 0 20px;
+    font-size: 16px;
+    color: #666;
+  }
+  
+  .custom-popup-button {
+    padding: 10px 20px;
     background-color: #9252AA;
-    color: #fff;
+    color: white;
+    border: none;
+    border-radius: 4px;
     cursor: pointer;
-    border-radius: 5px;
-}
+    font-size: 16px;
+  }
+  
+  .custom-popup-button:hover {
+    background-color: #7a2b8e;
+  }
+  
