--- a/src/css/decoration.css
+++ b/src/css/decoration.css
@@ -38,8 +38,9 @@ align-items: center;
 .add-on-prices li{
   list-style: none;
   display: flex;
-    justify-content: space-between;
-    font-size: 12px;
+  justify-content: space-between;
+  font-size: 14px;
+  flex-direction: column;
 }
 ul.decoration-addons {
   border-top: 1px solid #bbb5b5;
@@ -65,6 +66,7 @@ ul.decoration-addons {
 }
 
 @media (max-width:800px){
+
   .modal-card h3 {
     font-size: 11px !important;
     padding: 11px 0 0px !important;
@@ -84,6 +86,18 @@ img.model-image {
   li.addon-sec, p.addon-sec, .addon-sec {
     padding: 1px 0px 4px !important;
     font-size: 12px !important;
+}
+li.addon-sec {
+  padding: 1px 0px 4px !important;
+  font-size: 14px !important;
+  justify-content: flex-start;
+  display: flex;
+  align-items: baseline;
+  flex-direction: column;
+  margin-bottom: 7px;
+}
+li.addon-sec div:first-child{
+  font-weight: 500;
 }
   .modal-top-box h2 {
     font-size: 16px !important;
